Fixing layout issues with FlexBox in IE (not fully completed)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,17 +7,16 @@ app-menu {
 #main-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  align-content: stretch;
-  & > * {
+  height: 100%;
+  & > app-servers-environment {
     display: flex;
-    flex-grow: 1;
+    flex: 1 auto;
   }
 }
 
 .divider {
   width: 100%;
-  max-height: 2px;
+  height: 2px;
   background: white;
   flex: 0 auto;
 }
