--- a/src/app/servers-environment/servers-environment.component.scss
+++ b/src/app/servers-environment/servers-environment.component.scss
@@ -5,20 +5,25 @@
   flex-grow: 1;
 }
 
+.outer .container {
+  background: blue;
+  //min-width: fit-content;
+  //min-height: fit-content;
+}
+
 .outer {
   background-color: red;
   overflow: auto;
-  flex-grow: 1;
-  flex-direction: column;
+  align-items: center;
 }
 
 .inner {
   margin: auto;
+  flex: 0 0 auto;
   & > div {
     background-color: green;
     margin-right: 10px;
     flex-shrink: 0;
-    max-height: fit-content;
     &:last-child {
       margin-right: 0;
     }
