--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,7 @@ body {
   font-size: 100%;
   color: white;
 }
+
+html, body {
+  height: 100%;
+}
